# kokkos-remote-kernels

./: CMakeLists.txt  CompatibilityChecks.cpp  KokkosRemoteKernels_norm.cpp  README.md  helper.hpp  networking_code.hpp
src/impl/mpispace/: Kokkos_MPISpace_ViewTraits.hpp
src/impl/shmemspace/: Kokkos_SHMEMSpace_DataHandle.hpp  Kokkos_SHMEMSpace_ViewTraits.hpp
